; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/greybus/tools/extr_loopback_test.c_device_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/greybus/tools/extr_loopback_test.c_device_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loopback_test = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.loopback_test*, i32)* @device_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @device_enabled(%struct.loopback_test* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.loopback_test*, align 8
  %5 = alloca i32, align 4
  store %struct.loopback_test* %0, %struct.loopback_test** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.loopback_test*, %struct.loopback_test** %4, align 8
  %7 = getelementptr inbounds %struct.loopback_test, %struct.loopback_test* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load %struct.loopback_test*, %struct.loopback_test** %4, align 8
  %12 = getelementptr inbounds %struct.loopback_test, %struct.loopback_test* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = shl i32 1, %14
  %16 = and i32 %13, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %10, %2
  store i32 1, i32* %3, align 4
  br label %20

19:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %18
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
